--- a/style.css
+++ b/style.css
@@ -198,3 +198,25 @@ section {
 .contact-info a {
   color: #fce138;
 }
+.hero {
+  margin: 20px;
+  background-color: white;
+  font-size: 20px;
+  color: blue;
+}
+.hero-secondary {
+  margin: 20px;
+  background-color: black;
+  font-size: 20px;
+  color: red;
+}
+.page-title {
+  color: #fce138;
+  display: inline-block;
+  border-bottom: 4px solid;
+  border-color:  #fce138;
+  padding: 0 80px 15px 80px;
+  font-weight: normal;
+  font-size: 42px;
+  font-style: italic;
+}
